--- a/index.html
+++ b/index.html
@@ -165,8 +165,63 @@ const plan = [
     ]
   },
 
+ {
+  "title": "MÊS 4: Angular + Vue.js Intensivo",
+  "weeks": [
+    {
+      "title": "Semana 1: Fundamentos Angular",
+      "days": [
+        {"day": 1, "topic": "Introdução Angular", "detail": "O que é SPA, Angular CLI, Estrutura de Projeto, Primeiro Componente", "link": "https://angular.io/start"},
+        {"day": 2, "topic": "Componentes, Templates, Diretivas", "detail": "Componentes, Data Binding, Diretivas *ngIf e *ngFor", "link": "https://angular.io/guide/displaying-data"},
+        {"day": 3, "topic": "Pipes, Serviços, Injeção", "detail": "Pipes, Serviços, DI e Providers", "link": "https://angular.io/guide/pipes"},
+        {"day": 4, "topic": "Rotas e Navegação", "detail": "RouterModule, parâmetros, rotas filhas, lazy loading", "link": "https://angular.io/guide/router"},
+        {"day": 5, "topic": "Formulários", "detail": "Forms template-driven e reativos, validações", "link": "https://angular.io/guide/forms-overview"},
+        {"day": 6, "topic": "HTTP e Observables", "detail": "HttpClient, CRUD, RxJS básico", "link": "https://angular.io/guide/http"},
+        {"day": 7, "topic": "Guards e Projeto Prático 1", "detail": "Guards, Interceptors, mini app com autenticação", "link": ""}
+      ]
+    },
+    {
+      "title": "Semana 2: Angular Avançado",
+      "days": [
+        {"day": 8, "topic": "Comunicação entre Componentes", "detail": "@Input, @Output, serviços compartilhados", "link": "https://angular.io/guide/component-interaction"},
+        {"day": 9, "topic": "RxJS Avançado", "detail": "Subjects, BehaviorSubject, switchMap, debounceTime", "link": "https://rxjs.dev/"},
+        {"day": 10, "topic": "Testes em Angular", "detail": "Jasmine, Karma, TestBed, mocks de serviços", "link": "https://angular.io/guide/testing"},
+        {"day": 11, "topic": "Performance e Acessibilidade", "detail": "ChangeDetection, trackBy, i18n, a11y", "link": "https://angular.io/guide/accessibility"},
+        {"day": 12, "topic": "Projeto Angular Final", "detail": "Dashboard com login, API externa, deploy", "link": ""},
+        {"day": 13, "topic": "Revisão Angular", "detail": "Checklist de aprendizado, revisão de conceitos", "link": ""},
+        {"day": 14, "topic": "Extras / Reposição", "detail": "Tempo livre ou reforço", "link": ""}
+      ]
+    },
+    {
+      "title": "Semana 3: Fundamentos Vue.js",
+      "days": [
+        {"day": 15, "topic": "Introdução Vue.js", "detail": "CLI, Vite, estrutura, primeiro componente", "link": "https://vuejs.org/guide/quick-start.html"},
+        {"day": 16, "topic": "Diretivas Vue", "detail": "v-if, v-for, v-bind, v-model, eventos", "link": "https://vuejs.org/guide/essentials/template-syntax.html"},
+        {"day": 17, "topic": "Componentes e Props", "detail": "Props, eventos personalizados, slots", "link": "https://vuejs.org/guide/components/props.html"},
+        {"day": 18, "topic": "Reatividade e Lifecycle", "detail": "ref, reactive, computed, watch, hooks", "link": "https://vuejs.org/guide/essentials/reactivity-fundamentals.html"},
+        {"day": 19, "topic": "Vue Router", "detail": "Rotas, parâmetros, nested, guards", "link": "https://router.vuejs.org/"},
+        {"day": 20, "topic": "Pinia (Vuex) e Projeto", "detail": "Store, state global, projeto com login e API fake", "link": "https://pinia.vuejs.org/"},
+        {"day": 21, "topic": "Revisão Vue Básico", "detail": "Resumo geral, checklist, refatorações", "link": ""}
+      ]
+    },
+    {
+      "title": "Semana 4: Vue.js Avançado",
+      "days": [
+        {"day": 22, "topic": "Composition API", "detail": "setup, ref, reactive, provide/inject, composables", "link": "https://vuejs.org/guide/extras/composition-api-faq.html"},
+        {"day": 23, "topic": "Consumo de API", "detail": "Axios, autenticação JWT, interceptors", "link": "https://axios-http.com/"},
+        {"day": 24, "topic": "Performance Vue", "detail": "Lazy loading, suspense, divisão de bundles", "link": "https://vuejs.org/guide/best-practices/performance.html"},
+        {"day": 25, "topic": "Testes em Vue", "detail": "Vue Test Utils, mocks, cobertura de componentes", "link": "https://test-utils.vuejs.org/"},
+        {"day": 26, "topic": "Projeto Vue Final", "detail": "Dashboard com login, API externa, deploy", "link": ""},
+        {"day": 27, "topic": "Revisão Vue Avançado", "detail": "Checklist, ajustes, publicação no GitHub", "link": ""},
+        {"day": 28, "topic": "Extras / Reposição", "detail": "Estudos extras: Nuxt, Vuetify, animações", "link": "https://nuxt.com/"}
+      ]
+    }
+  ]
+}
+ 
+ 
      {
-  title: "MÊS 3: Java e POO",
+  title: "MÊS 5: Java e POO",
   weeks: [
     {title:"Semana 1: Java Básico e Projetos Práticos", days:[
       {day:113, topic:"Introdução ao Java", detail:"JDK, JVM, IDE (VS Code/IntelliJ), sintaxe", link:"https://www.youtube.com/playlist?list=PLHz_AreHm4dkI2ZdjTwZA4mPMxWTfNSpR"},
@@ -200,7 +255,7 @@ const plan = [
 
 
   {
-      title: "MÊS 4 – Backend Node.js, Banco de Dados e Express",
+      title: "MÊS 6 – Backend Node.js, Banco de Dados e Express",
       weeks: [
         {
           title: "Semana 1: Node.js e JavaScript avançado",
@@ -255,7 +310,7 @@ const plan = [
 
 
 {
-  title: "MÊS 5 – Backend com Golang e Rust",
+  title: "MÊS 7 – Backend com Golang e Rust",
   weeks: [
     {
       title: "Semana 1: Golang – Fundamentos Acelerados",
@@ -311,7 +366,7 @@ const plan = [
     
  
   {
-      title: "MÊS 6 – DevOps Básico, Docker, CI/CD e Testes",
+      title: "MÊS 8 – DevOps Básico (python), Docker, CI/CD e Testes",
       weeks: [
         {
           title: "Semana 1: Conceitos de DevOps",
@@ -367,7 +422,7 @@ const plan = [
 
 
 {
-  title: "MÊS 7: APIs REST & Segurança",
+  title: "MÊS 9: APIs REST & Segurança",
   weeks: [
     {title: "Semana 1: Fundamentos de REST", days: [
       {day: 141, topic: "Introdução a APIs REST", detail: "HTTP, métodos (GET, POST, PUT, DELETE), status codes", link: "https://www.youtube.com/watch?v=SLwpqD8n3d0"},
@@ -409,7 +464,7 @@ const plan = [
 },
 
 {
-  title: "MÊS 8: Cloud e Infraestrutura",
+  title: "MÊS 10: Cloud e Infraestrutura",
   weeks: [
     {title: "Semana 1: AWS Básico e Terraform", days: [
       {day: 169, topic: "Introdução à AWS", detail: "Conta AWS, IAM, EC2, S3, RDS", link: "https://www.youtube.com/watch?v=ulprqHHWlng"},
@@ -451,7 +506,7 @@ const plan = [
 },
 
   {
-      title: "MÊS 9 – Cybersegurança do Básico ao Avançado",
+      title: "MÊS 11 – Cybersegurança do Básico ao Avançado",
       weeks: [
         {
           title: "Semana 1: Fundamentos de Segurança da Informação",
@@ -504,7 +559,7 @@ const plan = [
       ]
     },
 {
-  "title": "MÊS 10: Preparação para o Mercado",
+  "title": "MÊS 12: Preparação para o Mercado",
   "weeks": [
     {
       "title": "Semana 1: Certificações & Perfil Profissional",
