--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Plano de Estudos 10 Meses - Fullstack + DevOps</title>
+<title>Plano de Estudos 10 Meses - FullStack + DevOps</title>
 <style>
   * {
     box-sizing: border-box;
